# IR_RGB_Merging

./: README.md  app.py  black_white.py  ldh_test.py  negative_image.py
LDH_code-main/: CMakeLists.txt  JetUtils.h  README.md  RedRiverIndividualCameraAdjustment.cpp  RedRiverIndividualCameraAdjustment.h  RedRiverOptimizationCostFunctors.h  create_combined_image.py  image_processing_utils.cpp  image_processing_utils.h  main.cpp  testing_path.py
lightglue/: lightglue.py
